--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Liu+Jian+Mao+Cao&family=Montserrat:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Square+Peg&family=Montserrat:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <script
@@ -27,11 +27,162 @@
     <div class="vp-container">
       <header>
         <h2 class="vp-logo">
-          <i class="fa-solid fa-crown"></i>
+          <i class="fas fa-crown"></i>
           <a href="#" target="_blank" rel="noopener noreferrer">Ludor</a>
         </h2>
+        <ul>
+          <li><a href="#offer">Nos offres</a></li>
+          <li><a href="#team">Notre équipe</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </header>
-      <section class="vp"></section>
+      <section class="vp">
+        <div class="vp-content">
+          <h1>
+            Un <strong>immobilier</strong> d'exception pour des clients
+            d'exception
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla alias
+            earum voluptatibus molestiae blanditiis nam ipsa? Quis modi magnam
+            minus?
+          </p>
+        </div>
+      </section>
     </div>
+    <section id="offer" class="offer">
+      <div class="container">
+        <h2 class="title">Nos dernières offres</h2>
+        <ul class="offer-list">
+          <li class="offer-elem">
+            <img src="./img/house-1.jpg" alt="house-1" class="offer-elem-img" />
+            <div class="offer-elem-text">
+              <p>Appartement - Paris 75007</p>
+              <p>11 chambres 450 m²</p>
+              <div class="offer-separator"></div>
+              <p>3 900 000€ - 4 200 000€</p>
+            </div>
+          </li>
+          <li class="offer-elem">
+            <img src="./img/house-2.jpg" alt="house-2" class="offer-elem-img" />
+            <div class="offer-elem-text">
+              <p>Appartement - Paris 75001</p>
+              <p>5 chambres 233 m²</p>
+              <div class="offer-separator"></div>
+              <p>3 900 000€ - 4 200 000€</p>
+            </div>
+          </li>
+          <li class="offer-elem">
+            <img src="./img/house-3.jpg" alt="house-3" class="offer-elem-img" />
+            <div class="offer-elem-text">
+              <p>Appartement - Paris 75001</p>
+              <p>3 chambres 432 m²</p>
+              <div class="offer-separator"></div>
+              <p>3 900 000€ - 4 200 000€</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section id="team" class="who">
+      <div class="who-content-img"></div>
+      <div class="who-content-text bg-dark">
+        <h2>
+          Une équipe de <strong>professionnels</strong> avec plus de 10 ans
+          d'expérience
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
+          maiores, ratione aperiam mollitia repellat excepturi at hic voluptas
+          possimus perferendis? Voluptates exercitationem aut rem illum saepe
+          odit necessitatibus, animi consectetur ad laborum rerum ab numquam sit
+          itaque est doloremque. Hic facilis provident eveniet. Quasi,
+          reprehenderit voluptatum consequatur porro rerum veritatis?
+        </p>
+      </div>
+    </section>
+    <section class="testimonials">
+      <div class="container">
+        <div class="testimonials-content">
+          <h2 class="title">Ecoutez ce qu'ils pensent de nous</h2>
+          <div class="testimonials-elem">
+            <div class="testimonials-elem-text">
+              <p>
+                <i class="fas fa-quote-left"></i>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non,
+                sapiente magni. Pariatur assumenda incidunt deleniti vel
+                repellat tempora error, delectus voluptates asperiores accusamus
+                sint non odio magni placeat dolores, blanditiis enim veniam.
+                Consequatur veritatis neque consectetur non iure possimus
+                officia cumque assumenda veniam fugit. Fugiat, velit corrupti?
+                Molestias, nostrum iure!
+                <i class="fas fa-quote-right"></i>
+              </p>
+            </div>
+            <div class="testimonials-elem-profil">
+              <img src="./img/person-1.jpg" alt="person-1" />
+              <p>Sophie Evans</p>
+              <em>Développeuse Web</em>
+            </div>
+          </div>
+          <div class="testimonials-elem testimonials-elem-reverse">
+            <div class="testimonials-elem-profil">
+              <img src="./img/person-2.jpg" alt="person-2" />
+              <p>Arthur Lac</p>
+              <em>Développeur Web</em>
+            </div>
+            <div class="testimonials-elem-text">
+              <p>
+                <i class="fas fa-quote-left"></i>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                dolore expedita sint similique saepe nam voluptates ducimus
+                placeat earum magni fugiat, qui voluptatem eius non officia
+                corrupti tempore laboriosam aspernatur.
+                <i class="fas fa-quote-right"></i>
+              </p>
+            </div>
+          </div>
+          <div class="testimonials-elem">
+            <div class="testimonials-elem-text">
+              <p>
+                <i class="fas fa-quote-left"></i>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                voluptatem facere aut voluptatum dignissimos debitis recusandae,
+                saepe, sequi hic dolores quas optio necessitatibus nihil
+                pariatur! Voluptate soluta doloribus praesentium sunt illo
+                corrupti, quos aspernatur nisi, repellat quod maxime possimus,
+                vitae voluptates tenetur deserunt pariatur voluptatum suscipit.
+                In consequuntur dolore id!
+                <i class="fas fa-quote-right"></i>
+              </p>
+            </div>
+            <div class="testimonials-elem-profil">
+              <img src="./img/person-3.jpg" alt="person-3" />
+              <p>Jean Dupont</p>
+              <em>CEO Etoile</em>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact" class="contact bg-dark">
+      <form action="#" class="contact-form">
+        <h2 class="title">Pour nous <strong>contacter</strong></h2>
+        <input type="text" placeholder="Nom" name="name" id="name" />
+        <input type="email" placeholder="Email" name="email" id="email" />
+        <input
+          type="text"
+          placeholder="Votre message ..."
+          name="message"
+          id="message"
+        />
+        <div>
+          <button>Soumettre</button>
+        </div>
+      </form>
+    </section>
+    <footer>
+      <p>Copyright © 2022 Dyma, Inc.</p>
+    </footer>
   </body>
 </html>
